--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -9,9 +9,9 @@
             "stopOnEntry": false,
             "console": "integratedTerminal",
             "outputCapture": [],
-            "luaVersion": "latest",
+            "luaVersion": "5.4",
             "luaArch": "x86_64",
-            "luaexe": "${workspaceRoot}\\3rd\\ant\\bin\\msvc\\release\\lua.exe",
+            "luaexe": "${workspaceRoot}\\bin\\msvc\\debug\\vaststars.exe",
             "program": "${workspaceRoot}\\main.lua",
             "cwd": "${workspaceRoot}\\3rd\\ant\\",
         }
