--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -11,9 +11,9 @@
             "outputCapture": [],
             "luaVersion": "5.4",
             "luaArch": "x86_64",
-            "luaexe": "${workspaceRoot}\\bin\\msvc\\release\\vaststars.exe",
-            "program": "${workspaceRoot}\\main.lua",
-            "cwd": "${workspaceRoot}\\3rd\\ant\\",
+            "luaexe": "${workspaceRoot}/bin/msvc/debug/vaststars.exe",
+            "program": "main.lua",
+            "cwd": "${workspaceRoot}",
         }
     ]
 }
