--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -103,7 +103,9 @@
         "xstddef": "cpp",
         "xstring": "cpp",
         "xtr1common": "cpp",
-        "xtree": "cpp"
+        "xtree": "cpp",
+        "*.rh": "cpp",
+        "*.idl": "cpp"
     },
     "Lua.diagnostics.disable": [
         "empty-block",
