--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,7 +4,8 @@
         "console",
         "import_package",
         "pipeline",
-        "system"
+        "system",
+        "log"
     ],
     "files.associations": {
         "*.sc": "glsl",
