capacitance changed to integer

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -116,5 +116,5 @@
         "empty-block",
         "discard-returns"
     ],
-    "lua.debug.variables.showIntegerAsHex": true,
+    "lua.debug.variables.showIntegerAsHex": false,
 }
