--- a/packages/resources/textures/canvas.cfg
+++ b/packages/resources/textures/canvas.cfg
@@ -1,12 +1,17 @@
 arrow.png:
   height: 203
   width: 271
-  x: 729
+  x: 683
+  y: 228
+cancel.png:
+  height: 233
+  width: 233
+  x: 450
   y: 0
 confirm.png:
   height: 228
   width: 279
-  x: 450
+  x: 683
   y: 0
 rotate.png:
   height: 265
