--- a/packages/resources/textures/canvas.cfg
+++ b/packages/resources/textures/canvas.cfg
@@ -1,5 +1,95 @@
-direction_arrow.png:
-  height: 207
-  width: 188
+fluid/chemical-gas.png:
+  height: 64
+  width: 64
+  x: 960
+  y: 0
+fluid/chemical-liquid.png:
+  height: 64
+  width: 64
+  x: 0
+  y: 64
+fluid/gas-air.png:
+  height: 64
+  width: 64
   x: 0
   y: 0
+fluid/gas-ch4.png:
+  height: 64
+  width: 64
+  x: 64
+  y: 0
+fluid/gas-chlorine.png:
+  height: 64
+  width: 64
+  x: 128
+  y: 0
+fluid/gas-co.png:
+  height: 64
+  width: 64
+  x: 192
+  y: 0
+fluid/gas-co2.png:
+  height: 64
+  width: 64
+  x: 256
+  y: 0
+fluid/gas-ethene.png:
+  height: 64
+  width: 64
+  x: 320
+  y: 0
+fluid/gas-hydrogen.png:
+  height: 64
+  width: 64
+  x: 384
+  y: 0
+fluid/gas-nitrogen.png:
+  height: 64
+  width: 64
+  x: 448
+  y: 0
+fluid/gas-oxygen.png:
+  height: 64
+  width: 64
+  x: 512
+  y: 0
+fluid/gas-steam.png:
+  height: 64
+  width: 64
+  x: 576
+  y: 0
+fluid/gas.png:
+  height: 64
+  width: 64
+  x: 64
+  y: 64
+fluid/liquid-hydrochloric.png:
+  height: 64
+  width: 64
+  x: 640
+  y: 0
+fluid/liquid-seawater.png:
+  height: 64
+  width: 64
+  x: 704
+  y: 0
+fluid/liquid-solution.png:
+  height: 64
+  width: 64
+  x: 768
+  y: 0
+fluid/liquid-wastewater.png:
+  height: 64
+  width: 64
+  x: 832
+  y: 0
+fluid/liquid-water.png:
+  height: 64
+  width: 64
+  x: 896
+  y: 0
+fluid/liquid.png:
+  height: 64
+  width: 64
+  x: 128
+  y: 64
