--- a/packages/resources/textures/canvas.cfg
+++ b/packages/resources/textures/canvas.cfg
@@ -1,95 +1,450 @@
-textures/fluid/chemical-gas.texture:
-  height: 64
+textures/construct/air-filter1.texture:
+  height: 46
+  width: 48
+  x: 845
+  y: 223
+textures/construct/alumina.texture:
+  height: 26
+  width: 38
+  x: 804
+  y: 309
+textures/construct/aluminum-hydroxide.texture:
+  height: 40
   width: 64
-  x: 960
+  x: 546
+  y: 269
+textures/construct/assembler.texture:
+  height: 60
+  width: 61
+  x: 865
   y: 0
-textures/fluid/chemical-liquid.texture:
-  height: 64
+textures/construct/assembler1.texture:
+  height: 61
+  width: 61
+  x: 497
+  y: 0
+textures/construct/assembler2.texture:
+  height: 61
+  width: 61
+  x: 558
+  y: 0
+textures/construct/broken-air-filter1.texture:
+  height: 55
+  width: 56
+  x: 785
+  y: 120
+textures/construct/broken-assembler.texture:
+  height: 62
+  width: 62
+  x: 190
+  y: 0
+textures/construct/broken-chemistry2.texture:
+  height: 62
+  width: 62
+  x: 314
+  y: 0
+textures/construct/broken-electric-pole1.texture:
+  height: 62
+  width: 62
+  x: 128
+  y: 0
+textures/construct/broken-electrolysis1.texture:
+  height: 55
+  width: 53
+  x: 841
+  y: 120
+textures/construct/broken-grid-battery.texture:
+  height: 59
+  width: 63
+  x: 130
+  y: 62
+textures/construct/broken-hydroplant.texture:
+  height: 62
+  width: 62
+  x: 66
+  y: 0
+textures/construct/broken-logisitic.texture:
+  height: 59
   width: 64
+  x: 66
+  y: 62
+textures/construct/broken-pump.texture:
+  height: 58
+  width: 64
+  x: 193
+  y: 62
+textures/construct/broken-solar-panel.texture:
+  height: 62
+  width: 62
+  x: 252
+  y: 0
+textures/construct/broken-truck.texture:
+  height: 54
+  width: 63
+  x: 958
+  y: 120
+textures/construct/capacitor.texture:
+  height: 36
+  width: 64
+  x: 716
+  y: 270
+textures/construct/chemistry2.texture:
+  height: 52
+  width: 62
+  x: 72
+  y: 175
+textures/construct/chest1.texture:
+  height: 47
+  width: 50
+  x: 292
+  y: 176
+textures/construct/chest2.texture:
+  height: 47
+  width: 50
+  x: 342
+  y: 176
+textures/construct/chimney2.texture:
+  height: 56
+  width: 60
+  x: 193
+  y: 120
+textures/construct/crucible.texture:
+  height: 50
+  width: 46
+  x: 528
+  y: 175
+textures/construct/crush-ore-Al.texture:
+  height: 44
+  width: 43
+  x: 893
+  y: 228
+textures/construct/crush-ore-Fe.texture:
+  height: 44
+  width: 43
+  x: 116
+  y: 227
+textures/construct/crusher1.texture:
+  height: 32
+  width: 42
+  x: 656
+  y: 308
+textures/construct/distillery.texture:
+  height: 40
+  width: 48
+  x: 422
+  y: 270
+textures/construct/electric-motor.texture:
+  height: 59
+  width: 78
+  x: 617
+  y: 61
+textures/construct/electric-pole1.texture:
+  height: 60
+  width: 60
+  x: 739
+  y: 60
+textures/construct/electrolysis1.texture:
+  height: 46
+  width: 42
+  x: 622
+  y: 176
+textures/construct/flotation-cell.texture:
+  height: 47
+  width: 50
+  x: 392
+  y: 176
+textures/construct/furnace1.texture:
+  height: 61
+  width: 60
+  x: 679
+  y: 0
+textures/construct/furnace2.texture:
+  height: 61
+  width: 60
+  x: 619
+  y: 0
+textures/construct/glass.texture:
+  height: 40
+  width: 46
+  x: 610
+  y: 270
+textures/construct/gravel.texture:
+  height: 45
+  width: 47
+  x: 742
+  y: 225
+textures/construct/hydroplant.texture:
+  height: 60
+  width: 60
+  x: 497
+  y: 61
+textures/construct/industry.texture:
+  height: 60
+  width: 60
+  x: 799
+  y: 60
+textures/construct/insert1.texture:
+  height: 62
+  width: 61
+  x: 376
+  y: 0
+textures/construct/insulated-wire.texture:
+  height: 44
+  width: 44
+  x: 789
+  y: 225
+textures/construct/iron-gear.texture:
+  height: 46
+  width: 45
+  x: 233
+  y: 224
+textures/construct/iron-wire.texture:
+  height: 40
+  width: 50
+  x: 209
+  y: 270
+textures/construct/iron_stick.texture:
+  height: 44
+  width: 44
+  x: 72
+  y: 227
+textures/construct/large-chest.texture:
+  height: 56
+  width: 58
+  x: 253
+  y: 120
+textures/construct/logic-circuit.texture:
+  height: 43
+  width: 42
+  x: 979
+  y: 228
+textures/construct/logisitic1.texture:
+  height: 54
+  width: 64
+  x: 894
+  y: 120
+textures/construct/manufacture.texture:
+  height: 60
+  width: 60
+  x: 919
+  y: 60
+textures/construct/miner.texture:
+  height: 55
+  width: 60
+  x: 725
+  y: 120
+textures/construct/ore-Si.texture:
+  height: 46
+  width: 45
+  x: 188
+  y: 224
+textures/construct/outfall.texture:
+  height: 57
+  width: 60
+  x: 418
+  y: 62
+textures/construct/pipe.texture:
+  height: 45
+  width: 60
+  x: 622
+  y: 225
+textures/construct/plastic.texture:
+  height: 58
+  width: 64
+  x: 257
+  y: 62
+textures/construct/plate-Ai.texture:
+  height: 42
+  width: 48
+  x: 326
+  y: 269
+textures/construct/plate-Fe.texture:
+  height: 42
+  width: 48
   x: 0
-  y: 64
-textures/fluid/gas-air.texture:
-  height: 64
-  width: 64
+  y: 229
+textures/construct/plate-Si.texture:
+  height: 42
+  width: 48
+  x: 374
+  y: 269
+textures/construct/processor.texture:
+  height: 66
+  width: 66
   x: 0
   y: 0
+textures/construct/pump1.texture:
+  height: 51
+  width: 62
+  x: 466
+  y: 175
+textures/construct/pumpjack1.texture:
+  height: 60
+  width: 62
+  x: 803
+  y: 0
+textures/construct/road1.texture:
+  height: 40
+  width: 64
+  x: 789
+  y: 269
+textures/construct/rubber.texture:
+  height: 62
+  width: 60
+  x: 437
+  y: 0
+textures/construct/sand.texture:
+  height: 38
+  width: 60
+  x: 656
+  y: 270
+textures/construct/steel-beam.texture:
+  height: 44
+  width: 43
+  x: 936
+  y: 228
+textures/construct/steel-gear.texture:
+  height: 47
+  width: 47
+  x: 574
+  y: 176
+textures/construct/stone-brick.texture:
+  height: 48
+  width: 54
+  x: 188
+  y: 176
+textures/construct/tank1.texture:
+  height: 60
+  width: 60
+  x: 926
+  y: 0
+textures/construct/truck.texture:
+  height: 44
+  width: 62
+  x: 436
+  y: 226
+textures/construct/turbine1.texture:
+  height: 60
+  width: 64
+  x: 739
+  y: 0
+textures/construct/underground-pipe1.texture:
+  height: 31
+  width: 38
+  x: 546
+  y: 309
+textures/construct/wind-turbine.texture:
+  height: 48
+  width: 49
+  x: 845
+  y: 175
+textures/fluid/brine-electrolysis-gas.texture:
+  height: 57
+  width: 48
+  x: 418
+  y: 119
+textures/fluid/brine-electrolysis-na.texture:
+  height: 58
+  width: 48
+  x: 370
+  y: 62
+textures/fluid/gas-butadiene.texture:
+  height: 32
+  width: 50
+  x: 50
+  y: 303
 textures/fluid/gas-ch4.texture:
-  height: 64
-  width: 64
-  x: 64
-  y: 0
-textures/fluid/gas-chlorine.texture:
-  height: 64
-  width: 64
-  x: 128
-  y: 0
+  height: 32
+  width: 50
+  x: 853
+  y: 272
 textures/fluid/gas-co.texture:
-  height: 64
-  width: 64
-  x: 192
-  y: 0
-textures/fluid/gas-co2.texture:
-  height: 64
-  width: 64
-  x: 256
-  y: 0
+  height: 32
+  width: 50
+  x: 50
+  y: 271
 textures/fluid/gas-ethene.texture:
-  height: 64
-  width: 64
-  x: 320
-  y: 0
-textures/fluid/gas-hydrogen.texture:
-  height: 64
-  width: 64
-  x: 384
-  y: 0
-textures/fluid/gas-nitrogen.texture:
-  height: 64
-  width: 64
-  x: 448
-  y: 0
-textures/fluid/gas-oxygen.texture:
-  height: 64
-  width: 64
-  x: 512
-  y: 0
-textures/fluid/gas-steam.texture:
-  height: 64
-  width: 64
-  x: 576
-  y: 0
+  height: 32
+  width: 50
+  x: 903
+  y: 272
+textures/fluid/gas-seperate.texture:
+  height: 48
+  width: 50
+  x: 242
+  y: 176
 textures/fluid/gas.texture:
-  height: 64
-  width: 64
-  x: 64
-  y: 64
+  height: 32
+  width: 50
+  x: 100
+  y: 303
+textures/fluid/liquid-electrolysis.texture:
+  height: 56
+  width: 48
+  x: 361
+  y: 120
 textures/fluid/liquid-hydrochloric.texture:
-  height: 64
-  width: 64
-  x: 640
-  y: 0
-textures/fluid/liquid-seawater.texture:
-  height: 64
-  width: 64
-  x: 704
-  y: 0
-textures/fluid/liquid-solution.texture:
-  height: 64
-  width: 64
-  x: 768
-  y: 0
+  height: 54
+  width: 36
+  x: 86
+  y: 121
+textures/fluid/liquid-purify.texture:
+  height: 57
+  width: 50
+  x: 0
+  y: 66
 textures/fluid/liquid-wastewater.texture:
-  height: 64
-  width: 64
-  x: 832
-  y: 0
-textures/fluid/liquid-water.texture:
-  height: 64
-  width: 64
-  x: 896
-  y: 0
+  height: 54
+  width: 36
+  x: 894
+  y: 174
 textures/fluid/liquid.texture:
-  height: 64
-  width: 64
-  x: 128
-  y: 64
+  height: 54
+  width: 36
+  x: 36
+  y: 175
+textures/fluid/lubricant.texture:
+  height: 54
+  width: 36
+  x: 50
+  y: 121
+textures/fluid/water-electrolysis.texture:
+  height: 56
+  width: 48
+  x: 617
+  y: 120
+textures/property/research-packs.texture:
+  height: 52
+  width: 54
+  x: 134
+  y: 175
+textures/recipe/climatology-pack.texture:
+  height: 50
+  width: 45
+  x: 710
+  y: 175
+textures/recipe/electrical-pack.texture:
+  height: 50
+  width: 45
+  x: 665
+  y: 175
+textures/recipe/geology-pack.texture:
+  height: 50
+  width: 45
+  x: 755
+  y: 175
+textures/recipe/mechanical-pack.texture:
+  height: 50
+  width: 45
+  x: 800
+  y: 175
+textures/recipe/water2gravel.texture:
+  height: 56
+  width: 50
+  x: 311
+  y: 120
+textures/recipe/water2iron.texture:
+  height: 58
+  width: 49
+  x: 321
+  y: 62
