--- a/runtime/ios/vaststars/vaststars/Info.plist
+++ b/runtime/ios/vaststars/vaststars/Info.plist
@@ -7,5 +7,7 @@
 		<key>UIApplicationSupportsMultipleScenes</key>
 		<false/>
 	</dict>
+	<key>UIFileSharingEnabled</key>
+	<true/>
 </dict>
 </plist>
